--- a/index.html
+++ b/index.html
@@ -14,17 +14,82 @@
 
 <body>
 
-    <header>
-        <span>K9Zen</span> logo and nav here
-    </header>
+	<header>
+		<!-- Navbar core HTML copied from Bootstrap documentation and adapted -->
 
-    <article>
-        Hero image, callout and description of PRT method here
-    </article>
+		<nav class="navbar navbar-expand-sm navbar-light bg-light">
+			<a class="navbar-brand" href="index.html">K9Zen</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 
-    <footer>
-        Social links and copyrights here.
-    </footer>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+					</li>
+
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Training
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="#">Why K9Zen?</a>
+							<a class="dropdown-item" href="#">What we offer</a>
+							<a class="dropdown-item" href="#">Where we train</a>
+							<a class="dropdown-item" href="#">Class timetable</a>
+						</div>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contact</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">About</a>
+					</li>
+			</div>
+		</nav>
+	</header>
+
+	
+
+
+	<footer class="container-fluid footer-bar">
+		<div class="row">
+			<div class="col">
+				<div class="social-media">
+					<h5>Follow us</h5>
+					<ul class="list-inline">
+						<li class="list-inline-item social-link">
+							<a target="_blank" href="https://www.facebook.com">
+								<i class="fab fa-facebook" aria-hidden="true"></i>
+								<span class="sr-only">Facebook</span>
+							</a>
+						</li>
+						<li class="list-inline-item social-link">
+							<a target="_blank" href="https://www.twitter.com">
+								<i class="fab fa-twitter" aria-hidden="true"></i>
+								<span class="sr-only">Twitter</span>
+							</a>
+						</li>
+						<li class="list-inline-item social-link">
+							<a target="_blank" href="https://www.instagram.com">
+								<i class="fab fa-instagram" aria-hidden="true"></i>
+								<span class="sr-only">Instagram</span>
+							</a>
+						</li>
+						<li class="list-inline-item social-link">
+							<a target="_blank" href="https://www.youtube.com">
+								<i class="fab fa-youtube" aria-hidden="true"></i>
+								<span class="sr-only">YouTube</span>
+							</a>
+						</li>
+					</ul>
+				</div>
+				<div class="copyright">
+					<small>Copyright 2019 by bravoalpha79 - for educational purposes</small>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
