index.html content and initial styling

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<header>
 		<!-- Navbar core HTML copied from Bootstrap documentation and adapted -->
 
-		<nav class="navbar navbar-expand-sm navbar-light bg-light">
+		<nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light">
 			<a class="navbar-brand" href="index.html">K9Zen</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 
@@ -49,20 +49,51 @@
 		</nav>
 	</header>
 
-	
+	<div class="container-fluid hero-container">
+		<div class="container jumbotron-container">
+			<div class="row">
+				<div class="col-12">
+					<div class="jumbotron">
+						<h1 class="display-4">K9Zen Training School</h1>
+						<p class="lead">Because your favourite snout deserves the best.</p>
+						<a class="btn btn-primary btn-info" href="#prt-container" role="button">Discover us!</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="container" id="prt-container">
+			<div class="row">
+				<div class="col-12">
+                    <div id="prt-intro">
+					    <h2>Why K9Zen?</h2>
+					    <p>Traditional dog training methods rely on the "carrot-and-stick" approach to direct the dog towards
+						desirable behavioural patterns. However, any form of punishment, while effective on the short
+						term, may adversely impact the owner-dog relationship and induce unwanted long-term effects on
+						the dog such as development of anxiety or aggression. <br /><br />
+						At K9Zen, we apply the <strong>Positive Reinforcement</strong> training method. This means
+						that, instead of resorting to "corrections" (punishment) to deter undesired dog behaviour, we rely
+						solely on positive motivation (rewarding) to induce desirable behaviour. <br />
+                        Put simply: we want your dog to obey you out of desire, not fear.</p>
+                        <button  class="btn btn-primary btn-info" href="#" role="button">Meet our team</button>
+                    </div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+
 
 
 	<footer class="container-fluid footer-bar">
 		<div class="row">
 			<div class="col">
 				<div class="social-media">
-					<h5>Follow us</h5>
+					<h5>Follow us:</h5>
 					<ul class="list-inline">
 						<li class="list-inline-item social-link">
 							<a target="_blank" href="https://www.facebook.com">
-								<i class="fab fa-facebook" aria-hidden="true"></i>
-								<span class="sr-only">Facebook</span>
-							</a>
+								<i class="fab fa-facebook-f" aria-hidden="true"></i>
+								<span class="sr-only">Facebook</span></a>
 						</li>
 						<li class="list-inline-item social-link">
 							<a target="_blank" href="https://www.twitter.com">
