added remaining .html files w/ copied boilerplate, nav and footer

--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,10 @@
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<script src="https://kit.fontawesome.com/0467a2a6b6.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-	<title>K9Zen | Home</title>
+	<title>K9Zen | Contact</title>
 </head>
 
 <body>
-
 	<header>
 		<!-- Navbar core HTML copied from Bootstrap documentation and adapted -->
 
@@ -23,7 +22,7 @@
 
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
+					<li class="nav-item">
 						<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 					</li>
 
@@ -33,13 +32,13 @@
 							Training
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="#prt-container">Why K9Zen?</a>
+							<a class="dropdown-item" href="index.html#prt-container">Why K9Zen?</a>
 							<a class="dropdown-item" href="training.html">What we offer</a>
 							<a class="dropdown-item" href="training.html">Where we train</a>
 							<a class="dropdown-item" href="training.html">Class timetable</a>
 						</div>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item active">
 						<a class="nav-link" href="contact.html">Contact</a>
 					</li>
 					<li class="nav-item">
@@ -49,43 +48,9 @@
 		</nav>
 	</header>
 
-	<article>
-		<div class="container-fluid hero-container">
-			<div class="container jumbotron-container">
-				<div class="row">
-					<div class="col-12">
-						<div class="jumbotron">
-							<h1 class="display-4">K9Zen Training School</h1>
-							<p class="lead">Because your favourite snout deserves the best.</p>
-							<a class="btn btn-primary btn-info" href="#prt-container" role="button">Discover us!</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="container" id="prt-container">
-				<div class="row">
-					<div class="col-12">
-						<div id="prt-intro">
-							<h2>Why K9Zen?</h2>
-							<p>Traditional dog training methods rely on the "carrot-and-stick" approach to direct the
-								dog towards
-								desirable behavioural patterns. However, while appearing effective on the short
-								term, any form of punishment may induce unwanted long-term effects on
-								the dog such as development of anxiety or aggression, and negatively impact the
-								owner-dog relationship. <br /><br />
-						At K9Zen, we apply the <strong>Positive Reinforcement</strong> training method. This means
-								that, instead of resorting to "corrections" (punishment) to deter undesired dog
-								reactions, we rely
-								solely on positive motivation (rewarding) to induce desirable behaviour. <br /><br />
-                        Put simply: we want your dog to obey you out of desire, not fear.</p>
-								<button  class="btn btn-primary btn-info" href="#" role="button">Meet our team</button>
-						</div>
-					</div>
-				</div>
-			</div>
-
-		</div>
-	</article>
+    <article>
+        <p>Contact</p>
+    </article>
 
 
 	<footer class="container-fluid footer-bar">
