added more content to training.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="#prt-container">Why K9Zen?</a>
 							<a class="dropdown-item" href="training.html">What we offer</a>
-							<a class="dropdown-item" href="training.html">Where we train</a>
+							<a class="dropdown-item" href="training.html#map-container">Where we train</a>
 							<a class="dropdown-item" href="training.html">Class timetable</a>
 						</div>
 					</li>
@@ -51,7 +51,7 @@
 
 	<article>
 		<div class="container-fluid hero-container">
-			<div class="container jumbotron-container">
+			<section class="container jumbotron-container">
 				<div class="row">
 					<div class="col-12">
 						<div class="jumbotron">
@@ -61,8 +61,8 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="container" id="prt-container">
+			</section>
+			<section class="container" id="prt-container">
 				<div class="row">
 					<div class="col-12">
 						<div id="prt-intro">
@@ -82,7 +82,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>
 
 		</div>
 	</article>
