--- a/training.html
+++ b/training.html
@@ -35,8 +35,8 @@
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="index.html#prt-container">Why K9Zen?</a>
-							<a class="dropdown-item" href="training.html">What we offer</a>
-							<a class="dropdown-item" href="training.html">Where we train</a>
+							<a class="dropdown-item" href="training.html#offer">What we offer</a>
+							<a class="dropdown-item" href="training.html#where">Where we train</a>
 							<a class="dropdown-item" href="training.html">Class timetable</a>
 						</div>
 					</li>
@@ -50,9 +50,139 @@
 		</nav>
 	</header>
 
-    <article>
-        <p>Training</p>
-    </article>
+	<article>
+		<div class="container-fluid training-container">
+			<section class="container-fluid" id="offer">
+				<div class="row offer-container">
+					<div class="col-12 offer-header">
+						<h2>What we offer</h2>
+					</div>
+					<div class="row">
+						<div class="col-sm-12 col-md-6 col-lg-3 trg">
+							<h4><i class="far fa-thumbs-up"></i>Obedience Class</h4>
+							<p>
+								From leash walking, stopping, heeling and recall to "speaking", staying and releasing
+								items - this course covers everything your pet needs to master for everyday
+								interactions.
+								An essential for any urban dog.
+							</p>
+						</div>
+						<div class="col-sm-12 col-md-6 col-lg-3 trg">
+							<h4><i class="fas fa-magic"></i>Tricks Class</h4>
+							<p>
+								While the two of you are not expected to perform in a circus group after this course
+								(but you could if you chose to!), tricks training strengthens the owner-dog relationship
+								and enhances your dog's focus and
+								confidence.
+							</p>
+						</div>
+						<div class="col-sm-12 col-md-6 col-lg-3 trg">
+							<h4><i class="fas fa-paw"></i>Individual Training</h4>
+							<p>
+								You prefer two-on-one interaction rather than group work? We've got you covered!
+								Individual training at our training grounds or in your backyard or neighbourhood park -
+								the choice is all yours.
+							</p>
+						</div>
+						<div class="col-sm-12 col-md-6 col-lg-3 trg">
+							<h4><i class="far fa-comments"></i>Consultation</h4>
+							<p>
+								You've encountered a problem and are not sure if it is a problem to begin with? Not sure
+								how to address some specific behaviour of your dog? Or perhaps you need advice on food
+								or training equipment? We're here to support you with our extensive experience!
+							</p>
+						</div>
+						<div class="row justify-content-center trg-more-info">
+							<div class="col-11">
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis voluptas nihil
+									blanditiis
+									corrupti ipsum tempora tenetur minima provident. Labore id provident qui quia
+									doloremque
+									recusandae eius, et maxime accusamus neque?
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+			<section class="container-fluid" id="where">
+				<div class="row map-container">
+					<div class="col-12 location-header">
+						<h2>Where we train<h2>
+					</div>
+					<div class="col-md-4 location-info">
+						<p>We are located at:</p>
+						<address><strong>Trg bana J. Jelačića 1, Zagreb</address></strong>
+							<p>Situated in an urban environment, yet sufficiently secure from heavy traffic and crowds
+								of people, our training ground provides an ideal location for all your training needs.
+								<br />Public transportation nearby.
+								<br />Private parking space available.
+								<p>
+
+					</div>
+					<div class="col-md-8 embed-responsive embed-responsive-16by9 location-map">
+						<iframe class="embed-responsive-item"
+							src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1390.4484266789711!2d15.97771!3d45.8133241!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d6fdc2523427%3A0x38ba0548d814fdc9!2sTrg%20bana%20Josipa%20Jela%C4%8Di%C4%87a%2C%2010000%2C%20Zagreb!5e0!3m2!1shr!2shr!4v1574703336519!5m2!1shr!2shr"
+							width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""> </iframe>
+					</div>
+				</div>
+			</section>
+
+			<section class="container-fluid" id="when">
+				<div class="row justify-content-center timetable-container">
+					<div class="col-12 timetable-header">
+						<h2>Class Timetable</h2>
+					</div>
+
+					<div class="col-12 col-md-4 col-lg-2 timetable-day">
+						<h4>Monday</h4>
+						<p>17:00-18:30</p>
+						<h5>Obedience group 1</h5>
+						<p>19:00-20:30</p>
+						<h5>Tricks group 1</h5>
+					</div>
+					<div class="col-12 col-md-4 col-lg-2 timetable-day">
+						<h4>Tuesday</h4>
+						<p>16:00-17:30</p>
+						<h5>Obedience group 2</h5>
+						<p>18:00-19:30</p>
+						<h5>Tricks group 2</h5>
+					</div>
+					<div class="col-12 col-md-4 col-lg-2 timetable-day">
+						<h4>Thursday</h4>
+						<p>17:00-18:30</p>
+						<h5>Obedience group 1</h5>
+						<p>19:00-20:30</p>
+						<h5>Tricks group 1</h5>
+					</div>
+					<div class="col-12 col-md-4 col-lg-2 timetable-day">
+						<h4>Friday</h4>
+						<p>16:00-17:30</p>
+						<h5>Obedience group 2</h5>
+						<p>18:00-19:30</p>
+						<h5>Tricks group 2</h5>
+					</div>
+					<div class="col-12 col-md-4 col-lg-2 timetable-day">
+						<h4>Saturday</h4>
+						<p>10:00-11:15</p>
+						<h5>Obedience - <em>spare</em></h5>
+						<p>11:30-13:00</p>
+						<h5>Tricks - <em>spare</em></h5>
+					</div>
+				</div>
+			</section>
+
+
+
+	</article>
+
+
+
+
+
 
 	<footer class="container-fluid footer-bar">
 		<div class="row">
