added content and styling to about.html

--- a/about.html
+++ b/about.html
@@ -49,10 +49,58 @@
 		</nav>
 	</header>
 
-
-    <article>
-        <p>About</p>
-    </article>
+	<article>
+		<div class="container-fluid about-container">
+			<section class="row justify-content-center about-us">
+				<div class="col about-heading">
+					<h2>Our instructors</h2>
+				</div>
+				<div class="row justify-content-center about-jane">
+					<div class="col-lg-5 jane-image">
+						<img src="assets/img/jane.png" alt="Jane photo" height="420" width="420"/>
+					</div>
+					<div class="col-lg-5 jane-text">
+					    <h4>Jane Smith</h4>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, magnam harum
+							consectetur
+							unde cum recusandae inventore excepturi id, sequi facilis numquam velit maiores. Commodi
+							doloremque ea totam ut ad alias rem, blanditiis incidunt vel! Illum, provident ab?
+							Facere,
+							laboriosam id! Eos vero omnis ea soluta eum quibusdam repellendus officiis veritatis?
+						<p>
+					</div>
+				</div>   
+				<div class="row justify-content-center about-john">
+					<div class="col-lg-5 john-text">
+						<h4>John Smith</h4>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, magnam harum
+							consectetur
+							unde cum recusandae inventore excepturi id, sequi facilis numquam velit maiores.
+							Commodi
+							doloremque ea totam ut ad alias rem, blanditiis incidunt vel! Illum, provident ab?
+							Facere,
+							laboriosam id! Eos vero omnis ea soluta eum quibusdam repellendus officiis
+							veritatis?
+						</p>
+					</div>
+					<div class="col-lg-5 john-image">
+						<img src="assets/img/john.jpg" alt="John photo" height="420" width="420"/>
+					</div>
+				</div>   
+                <div class="row justify-content-center learn-more">  
+				    <div class="col-10">
+					    <p>
+						    Would you like to know more about our instructors or about Positive
+						    Reinforcement
+				    	    Training? <br />Please do not hesitate to <span><a href=contact.html>contact us</a></span>!
+					    </p>
+				    </div>
+				</div>    
+		    </section>
+		</div>
+	</article>
 
 
 
