--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
 								term, any form of punishment may induce unwanted long-term effects on
 								the dog such as development of anxiety or aggression, and negatively impact the
 								owner-dog relationship. <br /><br />
-						At K9Zen, we apply the <strong>Positive Reinforcement</strong> training method. This means
+						At K9Zen, we apply the <strong>Positive Reinforcement Training</strong>  method. This means
 								that, instead of resorting to "corrections" (punishment) to deter undesired dog
 								reactions, we rely
 								solely on positive motivation (rewarding) to induce desirable behaviour. <br /><br />
                         Put simply: we want your dog to obey you out of desire, not fear.</p>
-								<button  class="btn btn-primary btn-info" href="#" role="button">Meet our team</button>
+								<a  class="btn btn-primary btn-info" href="about.html" role="button">Meet our team</a>
 						</div>
 					</div>
 				</div>
