--- a/training.html
+++ b/training.html
@@ -89,7 +89,7 @@
 							<p>
 								You've encountered a problem and are not sure if it is a problem to begin with? Not sure
 								how to address some specific behaviour of your dog? Or perhaps you need advice on food
-								or training equipment? We're here to support you with our extensive experience!
+								or training equipment? We're here to support you with our extensive experience.
 							</p>
 						</div>
 						<div class="row justify-content-center trg-more-info">
