--- a/training.html
+++ b/training.html
@@ -52,8 +52,8 @@
 
 	<article>
 		<div class="container-fluid training-container">
-			<section class="container-fluid" id="offer">
-				<div class="row offer-container">
+			<div class="container">
+				<section class="row" id="offer">
 					<div class="col-12 offer-header">
 						<h2>What we offer</h2>
 					</div>
@@ -104,20 +104,22 @@
 							</div>
 						</div>
 					</div>
-				</div>
-			</section>
+				</section>
+			
 
 
-			<section class="container-fluid" id="where">
-				<div class="row map-container">
+			
+				<section class="row" id="map-container">
 					<div class="col-12 location-header">
 						<h2>Where we train<h2>
 					</div>
 					<div class="col-md-4 location-info">
 						<p>We are located at:</p>
 						<address><strong>Trg bana J. Jelačića 1, Zagreb</address></strong>
-							<p>Situated in an urban environment, yet sufficiently secure from heavy traffic and crowds
-								of people, our training ground provides an ideal location for all your training needs.
+							<p>Situated in an urban environment, yet sufficiently secure from heavy traffic and
+								crowds
+								of people, our training ground provides an ideal location for all your training
+								needs.
 								<br />Public transportation nearby.
 								<br />Private parking space available.
 								<p>
@@ -128,53 +130,59 @@
 							src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1390.4484266789711!2d15.97771!3d45.8133241!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d6fdc2523427%3A0x38ba0548d814fdc9!2sTrg%20bana%20Josipa%20Jela%C4%8Di%C4%87a%2C%2010000%2C%20Zagreb!5e0!3m2!1shr!2shr!4v1574703336519!5m2!1shr!2shr"
 							width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""> </iframe>
 					</div>
-				</div>
-			</section>
+				</section>
+			
 
-			<section class="container-fluid" id="when">
-				<div class="row justify-content-center timetable-container">
+			
+				<section class="row justify-content-center" id="timetable-container">
 					<div class="col-12 timetable-header">
 						<h2>Class Timetable</h2>
 					</div>
-
-					<div class="col-12 col-md-4 col-lg-2 timetable-day">
-						<h4>Monday</h4>
-						<p>17:00-18:30</p>
-						<h5>Obedience group 1</h5>
-						<p>19:00-20:30</p>
-						<h5>Tricks group 1</h5>
+					<div class="row justify-content-center">
+						<div class="col-12 col-md-4 col-lg-2 timetable-day">
+							<h4>Monday</h4>
+							<p>17:00-18:30</p>
+							<h5>Obedience group 1</h5>
+                            <hr>
+							<p>19:00-20:30</p>
+							<h5>Tricks group 1</h5>
+						</div>
+						<div class="col-12 col-md-4 col-lg-2 timetable-day">
+							<h4>Tuesday</h4>
+							<p>16:00-17:30</p>
+							<h5>Obedience group 2</h5>
+                            <hr>
+							<p>18:00-19:30</p>
+							<h5>Tricks group 2</h5>
+						</div>
+						<div class="col-12 col-md-4 col-lg-2 timetable-day">
+							<h4>Thursday</h4>
+							<p>17:00-18:30</p>
+							<h5>Obedience group 1</h5>
+                            <hr>
+							<p>19:00-20:30</p>
+							<h5>Tricks group 1</h5>
+						</div>
+						<div class="col-12 col-md-4 col-lg-2 timetable-day">
+							<h4>Friday</h4>
+							<p>16:00-17:30</p>
+							<h5>Obedience group 2</h5>
+                            <hr>
+							<p>18:00-19:30</p>
+							<h5>Tricks group 2</h5>
+						</div>
+						<div class="col-12 col-md-4 col-lg-2 timetable-day">
+							<h4>Saturday</h4>
+							<p>10:00-11:15</p>
+							<h5>Obedience - <em>spare</em></h5>
+                            <hr>
+							<p>11:30-13:00</p>
+							<h5>Tricks - <em>spare</em></h5>
+						</div>
 					</div>
-					<div class="col-12 col-md-4 col-lg-2 timetable-day">
-						<h4>Tuesday</h4>
-						<p>16:00-17:30</p>
-						<h5>Obedience group 2</h5>
-						<p>18:00-19:30</p>
-						<h5>Tricks group 2</h5>
-					</div>
-					<div class="col-12 col-md-4 col-lg-2 timetable-day">
-						<h4>Thursday</h4>
-						<p>17:00-18:30</p>
-						<h5>Obedience group 1</h5>
-						<p>19:00-20:30</p>
-						<h5>Tricks group 1</h5>
-					</div>
-					<div class="col-12 col-md-4 col-lg-2 timetable-day">
-						<h4>Friday</h4>
-						<p>16:00-17:30</p>
-						<h5>Obedience group 2</h5>
-						<p>18:00-19:30</p>
-						<h5>Tricks group 2</h5>
-					</div>
-					<div class="col-12 col-md-4 col-lg-2 timetable-day">
-						<h4>Saturday</h4>
-						<p>10:00-11:15</p>
-						<h5>Obedience - <em>spare</em></h5>
-						<p>11:30-13:00</p>
-						<h5>Tricks - <em>spare</em></h5>
-					</div>
-				</div>
-			</section>
-
+				</section>
+			</div>
+		</div>
 
 
 	</article>
