added content  and styling to contacts.html

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 					</div>
 				    <div class="row justify-content-center about-jane">
 					    <div class="col-lg-5 jane-image">
-							<img src="assets/img/jane.png" alt="Jane photo" height="420" width="420"/>
+							<img src="assets/img/jane.jpg" alt="Jane photo"/>
 					    </div>
 					    <div class="col-lg-5 jane-text">
 								<h4>Jane Smith</h4>
@@ -89,11 +89,11 @@
 								</p>
 					    </div>
 					    <div class="col-lg-5 john-image">
-								<img src="assets/img/john.jpg" alt="John photo" height="420" width="420"/>
+								<img src="assets/img/john.jpg" alt="John photo"/>
 					    </div>
 				    </div>
 				    <div class="row justify-content-center learn-more">
-					    <div class="col-12">
+					    <div class="col-10">
 							<p>
 										Would you like to know more about our instructors or about Positive
 										Reinforcement
