--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,47 @@
 	</header>
 
     <article>
-        <p>Contact</p>
+        <div class="container-fluid contact-container">
+            <section class="container">
+                <section class="row justify-content-center contact-options">
+                    <div class="col-12 contact-header">
+                        <h2>Contact us</h2>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-12 col-md-4 contact-frame">
+                            <div class="btn--outer-frame">
+                                <a href="#">
+                                    <div class="btn--button">
+                                        <span class="btn--text">Visit</span>
+                                        <span class="btn--icon"><i class="far fa-handshake"></i></span>
+                                    </div>
+                                </a>   
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-4 contact-frame">
+                            <div class="btn--outer-frame">
+                                <a href="#">
+                                    <div class="btn--button">
+                                        <span class="btn--text">Call</span>
+                                        <span class="btn--icon"><i class="fas fa-phone"></i></span>
+                                    </div>
+                                </a>   
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-4 contact-frame">
+                            <div class="btn--outer-frame">
+                                <a href="#">
+                                    <div class="btn--button">
+                                        <span class="btn--text">Write</span>
+                                        <span class="btn--icon"><i class="far fa-envelope"></i></span>
+                                    </div>
+                                </a>   
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
     </article>
 
 
