--- a/contact.html
+++ b/contact.html
@@ -50,13 +50,14 @@
 
     <article>
         <div class="container-fluid contact-container">
-            <section class="container">
+            <div class="container">
                 <section class="row justify-content-center contact-options">
                     <div class="col-12 contact-header">
                         <h2>Contact us</h2>
                     </div>
-                    <div class="row justify-content-center">
-                        <div class="col-12 col-md-4 contact-frame">
+                    <!-- <div class="row justify-content-center">-->
+                    <div class="col-12 col-md-4">
+                        <div class="row justify-content-center contact-frame">
                             <div class="btn--outer-frame">
                                 <a href="#">
                                     <div class="btn--button">
@@ -65,8 +66,10 @@
                                     </div>
                                 </a>   
                             </div>
-                        </div>
-                        <div class="col-12 col-md-4 contact-frame">
+                        </div>    
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="row justify-content-center contact-frame">
                             <div class="btn--outer-frame">
                                 <a href="#">
                                     <div class="btn--button">
@@ -76,17 +79,20 @@
                                 </a>   
                             </div>
                         </div>
-                        <div class="col-12 col-md-4 contact-frame">
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="row justify-content-center contact-frame">
                             <div class="btn--outer-frame">
                                 <a href="#">
                                     <div class="btn--button">
-                                        <span class="btn--text">Write</span>
+                                        <span class="btn--text">Message</span>
                                         <span class="btn--icon"><i class="far fa-envelope"></i></span>
                                     </div>
                                 </a>   
                             </div>
-                        </div>
+                        </div>    
                     </div>
+                    <!--</div>-->
                 </section>
             </div>
         </div>
