--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<a class="dropdown-item" href="#prt-container">Why K9Zen?</a>
 							<a class="dropdown-item" href="training.html">What we offer</a>
 							<a class="dropdown-item" href="training.html#map-container">Where we train</a>
-							<a class="dropdown-item" href="training.html">Class timetable</a>
+							<a class="dropdown-item" href="training.html#timetable-container">Class timetable</a>
 						</div>
 					</li>
 					<li class="nav-item">
