--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="index.html#prt-container">Why K9Zen?</a>
 							<a class="dropdown-item" href="training.html">What we offer</a>
-							<a class="dropdown-item" href="training.html">Where we train</a>
-							<a class="dropdown-item" href="training.html">Class timetable</a>
+							<a class="dropdown-item" href="training.html#map-container">Where we train</a>
+							<a class="dropdown-item" href="training.html#timetable-container">Class timetable</a>
 						</div>
 					</li>
 					<li class="nav-item active">
@@ -48,56 +48,139 @@
 		</nav>
 	</header>
 
-    <article>
-        <div class="container-fluid contact-container">
-            <div class="container">
-                <section class="row justify-content-center contact-options">
-                    <div class="col-12 contact-header">
-                        <h2>Contact us</h2>
-                    </div>
-                    <!-- <div class="row justify-content-center">-->
-                    <div class="col-12 col-md-4">
-                        <div class="row justify-content-center contact-frame">
-                            <div class="btn--outer-frame">
-                                <a href="#">
-                                    <div class="btn--button">
-                                        <span class="btn--text">Visit</span>
-                                        <span class="btn--icon"><i class="far fa-handshake"></i></span>
-                                    </div>
-                                </a>   
-                            </div>
-                        </div>    
-                    </div>
-                    <div class="col-12 col-md-4">
-                        <div class="row justify-content-center contact-frame">
-                            <div class="btn--outer-frame">
-                                <a href="#">
-                                    <div class="btn--button">
-                                        <span class="btn--text">Call</span>
-                                        <span class="btn--icon"><i class="fas fa-phone"></i></span>
-                                    </div>
-                                </a>   
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-4">
-                        <div class="row justify-content-center contact-frame">
-                            <div class="btn--outer-frame">
-                                <a href="#">
-                                    <div class="btn--button">
-                                        <span class="btn--text">Message</span>
-                                        <span class="btn--icon"><i class="far fa-envelope"></i></span>
-                                    </div>
-                                </a>   
-                            </div>
-                        </div>    
-                    </div>
-                    <!--</div>-->
-                </section>
-            </div>
-        </div>
-    </article>
+	<article>
+		<div class="container-fluid contact-container">
+			<div class="container">
+				<section class="row justify-content-center contact-options">
+					<div class="col-12 contact-header">
+						<h2>Contact us</h2>
+					</div>
+					<div class="col-12 col-md-4">
+						<div class="row justify-content-center contact-frame">
+							<div class="btn--outer-frame">
+								<a href="#" data-toggle="modal" data-target="#visitModal">
+									<div class="btn--button">
+										<span class="btn--text">Visit</span>
+										<span class="btn--icon"><i class="far fa-handshake"></i></span>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-4">
+						<div class="row justify-content-center contact-frame">
+							<div class="btn--outer-frame">
+								<a href="#" data-toggle="modal" data-target="#callModal">
+									<div class="btn--button">
+										<span class="btn--text">Call</span>
+										<span class="btn--icon"><i class="fas fa-phone"></i></span>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-4">
+						<div class="row justify-content-center contact-frame">
+							<div class="btn--outer-frame">
+								<a href="#" data-toggle="modal" data-target="#messageModal">
+									<div class="btn--button">
+										<span class="btn--text">Message</span>
+										<span class="btn--icon"><i class="far fa-envelope"></i></span>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+				</section>
+			</div>
+		</div>
+	</article>
 
+
+    <!--- Modals - code copied from Bootstrap documentation and adapted -->
+
+	<div class="modal fade" id="callModal" tabindex="-1" role="dialog" aria-labelledby="callModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="callModalLabel">Call us</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+				</div>
+				<div class="modal-body">
+					You can reach us every day (weekends included) <strong>from 10am to 4pm</strong> on the following number: <br />
+                    <span class="phone-number">09 555 1234</span>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+    <div class="modal fade" id="visitModal" tabindex="-1" role="dialog" aria-labelledby="visitModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="visitModalLabel">Visit us</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+				</div>
+				<div class="modal-body">
+					You are most welcome to visit us during any of our training classes. Please check our <a
+						class="modal--link" href="training.html#map-container">training location</a> and <a
+						class="modal--link" href="training.html#timetable-container">class timetable</a> for details.
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+    <div class="modal fade" id="messageModal" tabindex="-1" role="dialog" aria-labelledby="messageModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="messageModalLabel">Message us</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+				</div>
+				<div class="modal-body">
+					<form>
+                        <div class="form-group">
+                            <label for="name" class="col-form-label">Name:</label>
+                            <input type="text" class="form-control" id="name" placeholder="(required)" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email" class="col-form-label">Email:</label>
+                            <input type="email" class="form-control" id="email" placeholder="(required)" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="phone" class="col-form-label">Phone:</label>
+                            <input type="text" class="form-control" id="phone" placeholder="(optional)">
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text" class="col-form-label">Message:</label>
+                            <textarea class="form-control" id="message-text"></textarea>
+                        </div>
+                    </form>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Send message</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+    <!-- /Modals  ----------------------------------->
 
 	<footer class="container-fluid footer-bar">
 		<div class="row">
