--- a/training.html
+++ b/training.html
@@ -35,9 +35,9 @@
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="index.html#prt-container">Why K9Zen?</a>
-							<a class="dropdown-item" href="training.html#offer">What we offer</a>
-							<a class="dropdown-item" href="training.html#where">Where we train</a>
-							<a class="dropdown-item" href="training.html">Class timetable</a>
+							<a class="dropdown-item" href="training.html">What we offer</a>
+							<a class="dropdown-item" href="training.html#map-container">Where we train</a>
+							<a class="dropdown-item" href="training.html#timetable-container">Class timetable</a>
 						</div>
 					</li>
 					<li class="nav-item">
