--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
                     </button>
 				</div>
 				<div class="modal-body">
-					<form>
+					<form id="message-send">
                         <div class="form-group">
                             <label for="name" class="col-form-label">Name:</label>
                             <input type="text" class="form-control" id="name" placeholder="(required)" required>
@@ -168,13 +168,13 @@
                         </div>
                         <div class="form-group">
                             <label for="message-text" class="col-form-label">Message:</label>
-                            <textarea class="form-control" id="message-text"></textarea>
+                            <textarea class="form-control" id="message-text" required></textarea>
                         </div>
                     </form>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">Send message</button>
+                    <button type="submit" form="message-send" class="btn btn-primary">Send message</button>
 				</div>
 			</div>
 		</div>
