added missing content to training.html and fixed anchor formatting

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 								reactions, we rely
 								solely on positive motivation (rewarding) to induce desirable behaviour. <br /><br />
                         Put simply: we want your dog to obey you out of desire, not fear.</p>
-								<span><a  class="btn btn-primary btn-info" href="about.html" role="button">Meet our team</a></span>
+								<span><a  class="btn btn-primary btn-info" href="training.html" role="button">Our training</a></span>
 						</div>
 					</div>
 				</div>
