--- a/training.html
+++ b/training.html
@@ -95,20 +95,20 @@
 						<div class="row justify-content-center trg-more-info">
 							<div class="col-11">
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis voluptas nihil
-									blanditiis
-									corrupti ipsum tempora tenetur minima provident. Labore id provident qui quia
-									doloremque
-									recusandae eius, et maxime accusamus neque?
+									Please check our <a href="#map-container">location</a> and <a
+										href="#timetable-container">timetable</a> sections for details about our classes. For
+									information about individual training and consultation, as well as for any other
+									question you might have, please do not hesitate to <a href="contact.html">contact
+										us</a>.
 								</p>
 							</div>
 						</div>
 					</div>
 				</section>
-			
 
 
-			
+
+
 				<section class="row" id="map-container">
 					<div class="col-12 location-header">
 						<h2>Where we train<h2>
@@ -131,55 +131,66 @@
 							width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""> </iframe>
 					</div>
 				</section>
-			
 
-			
+
+
 				<section class="row justify-content-center" id="timetable-container">
 					<div class="col-12 timetable-header">
 						<h2>Class Timetable</h2>
 					</div>
 					<div class="col-12 col-md-4 col-lg-2 timetable-day">
-							<h4>Monday</h4>
-							<p>17:00-18:30</p>
-							<h5>Obedience group 1</h5>
-                            <hr>
-							<p>19:00-20:30</p>
-							<h5>Tricks group 1</h5>
+						<h4>Monday</h4>
+						<p>17:00-18:30</p>
+						<h5>Obedience group 1</h5>
+						<hr>
+						<p>19:00-20:30</p>
+						<h5>Tricks group 1</h5>
 					</div>
 					<div class="col-12 col-md-4 col-lg-2 timetable-day">
-							<h4>Tuesday</h4>
-							<p>16:00-17:30</p>
-							<h5>Obedience group 2</h5>
-                            <hr>
-							<p>18:00-19:30</p>
-							<h5>Tricks group 2</h5>
+						<h4>Tuesday</h4>
+						<p>16:00-17:30</p>
+						<h5>Obedience group 2</h5>
+						<hr>
+						<p>18:00-19:30</p>
+						<h5>Tricks group 2</h5>
 					</div>
 					<div class="col-12 col-md-4 col-lg-2 timetable-day">
-							<h4>Thursday</h4>
-							<p>17:00-18:30</p>
-							<h5>Obedience group 1</h5>
-                            <hr>
-							<p>19:00-20:30</p>
-							<h5>Tricks group 1</h5>
+						<h4>Thursday</h4>
+						<p>17:00-18:30</p>
+						<h5>Obedience group 1</h5>
+						<hr>
+						<p>19:00-20:30</p>
+						<h5>Tricks group 1</h5>
 					</div>
 					<div class="col-12 col-md-4 col-lg-2 timetable-day">
-							<h4>Friday</h4>
-							<p>16:00-17:30</p>
-							<h5>Obedience group 2</h5>
-                            <hr>
-							<p>18:00-19:30</p>
-							<h5>Tricks group 2</h5>
+						<h4>Friday</h4>
+						<p>16:00-17:30</p>
+						<h5>Obedience group 2</h5>
+						<hr>
+						<p>18:00-19:30</p>
+						<h5>Tricks group 2</h5>
 					</div>
 					<div class="col-12 col-md-4 col-lg-2 timetable-day">
-							<h4>Saturday</h4>
-							<p>10:00-11:15</p>
-							<h5>Obedience - <em>spare</em></h5>
-                            <hr>
-							<p>11:30-13:00</p>
-							<h5>Tricks - <em>spare</em></h5>
+						<h4>Saturday</h4>
+						<p>10:00-11:15</p>
+						<h5>Obedience - <em>spare</em></h5>
+						<hr>
+						<p>11:30-13:00</p>
+						<h5>Tricks - <em>spare</em></h5>
 					</div>
-				</section>
+					<div class="col-10 timetable-important">
+						<p>
+							<u>Important note:</u> You are most welcome to visit and observe any of our
+							classes. However,
+							<strong>if you'd like to visit with your dog, please <a href="contact.html">call us</a> in
+								advance</strong>,
+							as some dogs in our classes may be reactive to outside visitors. We thank you for your
+							understanding!
+						</p>
+					</div>
 			</div>
+			</section>
+		</div>
 		</div>
 
 
