--- a/index.html
+++ b/index.html
@@ -13,30 +13,26 @@
 </head>
 
 <body>
-
 	<header>
 		<!-- Navbar core HTML copied from Bootstrap documentation and adapted -->
-
 		<nav class="navbar fixed-top navbar-expand-sm navbar-light">
 			<a class="navbar-brand" href="index.html">K9Zen</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
 						<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 					</li>
-
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
 							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							Training
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="#prt-container">Why K9Zen?</a>
+							<a class="dropdown-item" href="#prt">Why K9Zen?</a>
 							<a class="dropdown-item" href="training.html">What we offer</a>
-							<a class="dropdown-item" href="training.html#map-container">Where we train</a>
-							<a class="dropdown-item" href="training.html#timetable-container">Class timetable</a>
+							<a class="dropdown-item" href="training.html#location">Where we train</a>
+							<a class="dropdown-item" href="training.html#timetable">Class timetable</a>
 						</div>
 					</li>
 					<li class="nav-item">
@@ -45,27 +41,27 @@
 					<li class="nav-item">
 						<a class="nav-link" href="about.html">About</a>
 					</li>
+				</ul>    
 			</div>
 		</nav>
 	</header>
-
 	<article>
 		<div class="container-fluid hero-container">
 			<section class="container jumbotron-container">
 				<div class="row">
 					<div class="col-12">
-						<div class="jumbotron">
+						<div class="jumbotron frame--main">
 							<h1 class="display-4">K9Zen Training School</h1>
 							<p class="lead">Because your favourite snout deserves the best.</p>
-							<a class="btn btn-primary btn-info" href="#prt-container" role="button">Discover us!</a>
+							<a class="btn btn-primary btn-info" href="#prt" role="button">Discover us!</a>
 						</div>
 					</div>
 				</div>
 			</section>
-			<section class="container" id="prt-container">
+			<section class="container" id="prt">
 				<div class="row">
 					<div class="col-12">
-						<div id="prt-intro">
+						<div class="prt-intro frame--main">
 							<h2>Why K9Zen?</h2>
 							<p>Traditional dog training methods rely on the "carrot-and-stick" approach to direct the
 								dog towards
@@ -73,7 +69,7 @@
 								term, any form of punishment may induce unwanted long-term effects on
 								the dog such as development of anxiety or aggression, and negatively impact the
 								owner-dog relationship. <br /><br />
-						At K9Zen, we apply the <strong>Positive Reinforcement Training</strong>  method. This means
+						At K9Zen, we apply the <strong>Positive Reinforcement Training</strong> method. This means
 								that, instead of resorting to "corrections" (punishment) to deter undesired dog
 								reactions, we rely
 								solely on positive motivation (rewarding) to induce desirable behaviour. <br /><br />
@@ -83,11 +79,8 @@
 					</div>
 				</div>
 			</section>
-
 		</div>
 	</article>
-
-
 	<footer class="container-fluid footer-bar">
 		<div class="row">
 			<div class="col">
