--- a/contact.html
+++ b/contact.html
@@ -15,27 +15,24 @@
 <body>
 	<header>
 		<!-- Navbar core HTML copied from Bootstrap documentation and adapted -->
-
 		<nav class="navbar fixed-top navbar-expand-sm navbar-light">
 			<a class="navbar-brand" href="index.html">K9Zen</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
 						<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 					</li>
-
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
 							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							Training
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="index.html#prt-container">Why K9Zen?</a>
+							<a class="dropdown-item" href="index.html#prt">Why K9Zen?</a>
 							<a class="dropdown-item" href="training.html">What we offer</a>
-							<a class="dropdown-item" href="training.html#map-container">Where we train</a>
-							<a class="dropdown-item" href="training.html#timetable-container">Class timetable</a>
+							<a class="dropdown-item" href="training.html#location">Where we train</a>
+							<a class="dropdown-item" href="training.html#timetable">Class timetable</a>
 						</div>
 					</li>
 					<li class="nav-item active">
@@ -44,14 +41,14 @@
 					<li class="nav-item">
 						<a class="nav-link" href="about.html">About</a>
 					</li>
+				</ul>                
 			</div>
 		</nav>
 	</header>
-
 	<article>
 		<div class="container-fluid contact-container">
 			<div class="container">
-				<section class="row justify-content-center contact-options">
+				<section class="row justify-content-center frame--main contact-options">
 					<div class="col-12 contact-header">
 						<h2>Contact us</h2>
 					</div>
@@ -96,9 +93,7 @@
 		</div>
 	</article>
 
-
     <!--- Modals - code copied from Bootstrap documentation and adapted -->
-
 	<div class="modal fade" id="callModal" tabindex="-1" role="dialog" aria-labelledby="callModalLabel"
 		aria-hidden="true">
 		<div class="modal-dialog" role="document">
@@ -119,7 +114,6 @@
 			</div>
 		</div>
 	</div>
-
     <div class="modal fade" id="visitModal" tabindex="-1" role="dialog" aria-labelledby="visitModalLabel"
 		aria-hidden="true">
 		<div class="modal-dialog" role="document">
@@ -132,8 +126,8 @@
 				</div>
 				<div class="modal-body">
 					You are most welcome to visit us during any of our training classes. Please check our <a
-						class="modal--link" href="training.html#map-container">training location</a> and <a
-						class="modal--link" href="training.html#timetable-container">class timetable</a> for details.
+						class="modal--link" href="training.html#location">training location</a> and <a
+						class="modal--link" href="training.html#timetable">class timetable</a> for details.
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -141,7 +135,6 @@
 			</div>
 		</div>
 	</div>
-
     <div class="modal fade" id="messageModal" tabindex="-1" role="dialog" aria-labelledby="messageModalLabel"
 		aria-hidden="true">
 		<div class="modal-dialog" role="document">
@@ -179,9 +172,7 @@
 			</div>
 		</div>
 	</div>
-
-    <!-- /Modals  ----------------------------------->
-
+    <!--- /Modals  ----------------------------------->
 	<footer class="container-fluid footer-bar">
 		<div class="row">
 			<div class="col">
