--- a/contact.html
+++ b/contact.html
@@ -97,14 +97,14 @@
 	<div class="modal fade" id="callModal" tabindex="-1" role="dialog" aria-labelledby="callModalLabel"
 		aria-hidden="true">
 		<div class="modal-dialog" role="document">
-			<div class="modal-content">
+			<div class="modal-content custom--modal-bg">
 				<div class="modal-header">
 					<h5 class="modal-title" id="callModalLabel">Call us</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                     </button>
 				</div>
-				<div class="modal-body">
+				<div class="modal-body custom--modal-body">
 					You can reach us every day (weekends included) <strong>from 10am to 4pm</strong> on the following number: <br />
                     <span class="phone-number">09 555 1234</span>
 				</div>
@@ -117,17 +117,17 @@
     <div class="modal fade" id="visitModal" tabindex="-1" role="dialog" aria-labelledby="visitModalLabel"
 		aria-hidden="true">
 		<div class="modal-dialog" role="document">
-			<div class="modal-content">
+			<div class="modal-content custom--modal-bg">
 				<div class="modal-header">
 					<h5 class="modal-title" id="visitModalLabel">Visit us</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                     </button>
 				</div>
-				<div class="modal-body">
+				<div class="modal-body custom--modal-body">
 					You are most welcome to visit us during any of our training classes. Please check our <a
-						class="modal--link" href="training.html#location">training location</a> and <a
-						class="modal--link" href="training.html#timetable">class timetable</a> for details.
+						class="modal--link inline--anchor" href="training.html#location">training location</a> and <a
+						class="modal--link inline--anchor" href="training.html#timetable">class timetable</a> for details.
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -138,36 +138,36 @@
     <div class="modal fade" id="messageModal" tabindex="-1" role="dialog" aria-labelledby="messageModalLabel"
 		aria-hidden="true">
 		<div class="modal-dialog" role="document">
-			<div class="modal-content">
+			<div class="modal-content custom--modal-bg">
 				<div class="modal-header">
 					<h5 class="modal-title" id="messageModalLabel">Message us</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                     </button>
 				</div>
-				<div class="modal-body">
+				<div class="modal-body custom--modal-body">
 					<form id="message-send">
                         <div class="form-group">
-                            <label for="name" class="col-form-label">Name:</label>
-                            <input type="text" class="form-control" id="name" placeholder="(required)" required>
+                            <label for="name" class="col-form-label">Name: *</label>
+                            <input type="text" class="form-control" id="name" required>
                         </div>
                         <div class="form-group">
-                            <label for="email" class="col-form-label">Email:</label>
-                            <input type="email" class="form-control" id="email" placeholder="(required)" required>
+                            <label for="email" class="col-form-label">Email: *</label>
+                            <input type="email" class="form-control" id="email" required>
                         </div>
                         <div class="form-group">
                             <label for="phone" class="col-form-label">Phone:</label>
                             <input type="text" class="form-control" id="phone" placeholder="(optional)">
                         </div>
                         <div class="form-group">
-                            <label for="message-text" class="col-form-label">Message:</label>
+                            <label for="message-text" class="col-form-label">Message: *</label>
                             <textarea class="form-control" id="message-text" required></textarea>
                         </div>
                     </form>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <button type="submit" form="message-send" class="btn btn-primary">Send message</button>
+                    <button type="submit" form="message-send" class="btn btn-info">Send message</button>
 				</div>
 			</div>
 		</div>
