--- a/training.html
+++ b/training.html
@@ -119,9 +119,9 @@
 
 					</div>
 					<div class="col-md-8 embed-responsive embed-responsive-16by9 location-map">
-						<iframe class="embed-responsive-item"
-							src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1390.4484266789711!2d15.97771!3d45.8133241!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d6fdc2523427%3A0x38ba0548d814fdc9!2sTrg%20bana%20Josipa%20Jela%C4%8Di%C4%87a%2C%2010000%2C%20Zagreb!5e0!3m2!1shr!2shr!4v1574703336519!5m2!1shr!2shr"
-							width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""> </iframe>
+						<iframe
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2780.899199336601!2d15.973845315775481!3d45.81327711810331!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d6fdbd6cc3b5%3A0x11808120af669ca0!2sTrg%20bana%20Josipa%20Jela%C4%8Di%C4%87a%201%2C%2010000%2C%20Zagreb!5e0!3m2!1sen!2shr!4v1575139076247!5m2!1sen!2shr"
+							width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 					</div>
 				</section>
 				<section class="row justify-content-center frame--main" id="timetable">
